@@ -1,55 +1,74 @@
 package dev.learn.i2p.core;
 
+import dev.learn.i2p.proto.MessengerProtocol;
+import dev.learn.i2p.proto.SimpleProtocol;
 import dev.learn.i2p.net.I2PTransport;
-import dev.learn.i2p.proto.Protocol;
+import net.i2p.data.Base32;
+import net.i2p.data.Destination;
+import net.i2p.data.Hash;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.Closeable;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
-public record Messenger(I2PTransport transport, Protocol protocol) implements Closeable {
+public record Messenger(I2PTransport transport, MessengerProtocol protocol, Path inbox) implements Closeable {
     private static final Logger log = LoggerFactory.getLogger(Messenger.class);
 
     public static Messenger createDefault() throws Exception {
-        Path keyFile = Path.of("messenger-keys.dat");
-        Path inbox = Path.of("inbox");
-        log.info("Messenger.createDefault() keyFile={}, inbox={}", keyFile.toAbsolutePath(), inbox.toAbsolutePath());
-        var t = I2PTransport.connectDefault(keyFile);
-        var p = new Protocol(inbox);
-        log.info("Messenger created. Local address: {}", t.myB32());
-        return new Messenger(t, p);
+        Path base = resolvePathDir(
+                "i2p.messenger.home",
+                Paths.get(System.getProperty("user.home"), ".i2p-messenger")
+        );
+        Path keyFile = resolvePath("i2p.messenger.keyfile", base.resolve("messenger-keys.dat"));
+        Path inboxDir = resolvePathDir("i2p.messenger.inbox", base.resolve("inbox"));
+
+        Files.createDirectories(keyFile.getParent());
+        Files.createDirectories(inboxDir);
+
+        log.info("Messenger.createDefault() keyFile={}, inbox={}", keyFile, inboxDir);
+        var transport = I2PTransport.connectDefault(keyFile);
+        var protocol = new SimpleProtocol(inboxDir);
+        return new Messenger(transport, protocol, inboxDir);
     }
 
-    public String myB32() {
-        return transport.myB32();
+    private static Path resolvePath(String sysProp, Path defVal) {
+        String v = System.getProperty(sysProp);
+        if (v == null || v.isBlank()) {
+            String env = System.getenv(sysProp.toUpperCase().replace('.', '_'));
+            if (env != null && !env.isBlank()) v = env;
+        }
+        return (v != null && !v.isBlank()) ? Paths.get(v) : defVal;
     }
+    private static Path resolvePathDir(String sysProp, Path defVal) { return resolvePath(sysProp, defVal); }
+
+    private static String b32Of(Destination dest) {
+        if (dest == null) return "<unknown>";
+        Hash h = dest.calculateHash();
+        return Base32.encode(h.getData()) + ".b32.i2p";
+    }
+
+    public String myB32() { return transport.myB32(); }
 
     public void listen() {
         log.info("Starting listener loop...");
         transport.acceptLoop(socket -> {
             try {
-                var dest = socket.getPeerDestination();
-                if (dest != null) {
-                    log.debug("Handling inbound from {}", dev.learn.i2p.net.I2PTransport.class
-                            .getDeclaredMethod("toB32", net.i2p.data.Destination.class) // reflect-safe call avoided; keep simple log
-                            .toString());
-                }
+                String peer = b32Of(socket.getPeerDestination());
+                log.debug("Inbound from {}", peer);
                 protocol.handle(socket);
             } catch (IOException e) {
-                System.err.println("Client error: " + e.getMessage());
-                log.warn("Client error: {}", e.getMessage(), e);
-
-            } catch (NoSuchMethodException e) {
-                throw new RuntimeException(e);
+                log.warn("Client error: {}", e.toString(), e);
             }
         });
     }
 
     public void sendText(String destB32, String text) throws IOException {
-        log.info("sendText -> {} ({} bytes)", destB32, text == null ? 0 : text.getBytes(java.nio.charset.StandardCharsets.UTF_8).length);
-
+        int len = (text == null) ? 0 : text.getBytes(java.nio.charset.StandardCharsets.UTF_8).length;
+        log.info("sendText -> {} ({} bytes)", destB32, len);
         transport.withConnection(destB32, s -> protocol.sendText(s, text));
     }
 
@@ -60,9 +79,7 @@ public record Messenger(I2PTransport transport, Protocol protocol) implements Cl
 
     @Override
     public void close() {
-        transport.close();
         log.info("Closing Messenger...");
         transport.close();
     }
-
 }
